# Vulkan-Playground

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
ResourceInitializer/: CMakeLists.txt
ResourceInitializer/src/: main.cxx
lib/: glfw3dll.exp  glfw3dll.lib
resources/shaders/: shader.frag.glsl  shader.vert.glsl
src/: Main.cxx  Vulkan.cxx  Vulkan.hxx  VulkanFunctions.cxx  VulkanFunctions.hxx  VulkanFunctions.inl  Window.cxx  Window.hxx  utils.cxx  utils.hxx
